# Kaspa-Raffle

./: .dockerignore  .env.example  .gitattributes  .gitignore  index.html  package-lock.json  package.json  render.yaml
.github/workflows/: build-raffle-cli.yml
backend/: monitor.js  server.js
backend/lib/: draw.js  kaspa-api.js  payouts.js
kaspa-raffle-website/: Dockerfile  index.html  package-lock.json  package.json
kaspa-raffle-website/backend/: cli.js  config.js  draw.js  registry.js  rpc.js  server.js
kaspa-raffle-website/backend-legacy/: server.js
kaspa-raffle-website/covenant/: raffle_entry.json  raffle_entry.sil
scripts/: SETUP-WALLET.txt  install-boot-startup.ps1  setup.ps1  start-backend.ps1  start-kaspad.ps1
silverscript/: Cargo.toml
silverscript/debugger/cli/src/: main.rs
silverscript/debugger/session/tests/: debug_session_tests.rs
silverscript/docs/: TUTORIAL.md
silverscript/extensions/zed/languages/silverscript/: highlights.scm
silverscript/raffle-cli/: Cargo.toml
silverscript/raffle-cli/src/: main.rs
silverscript/silverscript-lang/: Cargo.toml
silverscript/silverscript-lang/src/compiler/: compile.rs  debug_value_types.rs  mod.rs  static_check.rs  structs.rs  validate_output_state.rs
silverscript/silverscript-lang/tests/: cashc_valid_examples_tests.rs  chess_apps_tests.rs  common.rs  compiler_tests.rs  examples_tests.rs  raffle_tests.rs  silverc_tests.rs
silverscript/silverscript-lang/tests/examples/: hodl_vault.sil  simple_checksigfromstack.sil  simple_checksigfromstack_ecdsa.sil  trailing_comma.sil
(+22 files in other folders)
